--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,2 +1,2 @@
 <a href="{{ site.baseurl }}/about/">درباره‌ی من</a> | 
-<a href="{{ site.baseurl }}/feed.xml/">خوراک</a>
+<a href="{{ site.baseurl }}/feed.xml">خوراک</a>
