--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,8 +2,8 @@
 <a href="{{ site.baseurl }}/feed.xml">خوراک</a>
 <div class="left">
 {% for category in site.categories %}
-					<a href="/category/{{ category | first }}/" class="category">
-						{{ category | first }}  
+					<a href="{{site.baseurl}}/category/{{ category | first }}/" class="category">
+						{{ category | first}}  
 					</a> 
 				
 				{% endfor %}
