--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -19,7 +19,7 @@ layout: default
           <!-- Case for when no excerpt is defined -->
           {% endif %}
         </p>
-        <a class="btn continue" href="{{ post.url | prepend: site.url }}">ادامه‌ی مطلب </a>
+        <a class="btn continue" href="{{ post.url | prepend: site.baseurl }}">ادامه‌ی مطلب </a>
       </div>
     </div>
   {% endif %}
