--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,9 +3,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% if page.title %}{{ page.title }} &#8211; {% endif %}{{ site.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="{% if page.summary %}{{ page.summary }}{% else %}{{ site.description }}{% endif %}">
+    {% if page.description %}
+        <meta name="description" content="{{ page.description | truncatewords: 200 | strip_newlines | escape_once }}" />
+    {% else %}
+        <meta name="description" content="{{ content | strip_html | truncatewords: 200 | strip_newlines | escape_once }}" />
+    {% endif %}
     <meta name="author" content="{{ site.author }}">
-    {% if page.categories %}<meta name="keywords" content="{{ page.categories | join: ', ' }}">{% endif %}
+    {% if page.categories %}<meta name="keywords" content="{{ page.tags | join: ', '}}, {{page.categories | join: ', '}}">{% endif %}
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <!-- Custom CSS -->
