--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,16 @@
 ---
 layout: default
 ---
-<div class="post-header mb2">
-  <h1 class="py2">{{ page.title }}</h1>
-  <span class="post-meta">{{ page.date | date: "%b %-d, %Y" }}</span>
-</div>
+<div class="post med-box">
+	<div class="sub-box">
+		<div class="post-header mb2">
+			<a href="{{ page.url | prepend: site.baseurl }}" class="post-link"><h3 class="h2 post-title">{{ page.title }}</h3></a>
+			<span class="post-meta">{{ page.date | date: "%b %-d, %Y" }}</span>
+		</div>
 
-<article class="post-content">
-  {{ content }}
-</article>
+		<article class="post-content">
+			{{ content }}
+		</article>
+	</div>
+	{% include comments.html %}
+</div>
