--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,7 +2,7 @@
 <a href="{{ site.baseurl }}/feed.xml">خوراک</a>
 <div class="left">
 {% for category in site.categories %}
-					<a href="{{site.baseurl}}/category/{{ category | first }}/" class="category">
+					<a href="{{site.baseurl}}/categories/{{ category | first }}/" class="category">
 						{{ category | first}}  
 					</a> 
 				
