--- a/_includes/before_footer.html
+++ b/_includes/before_footer.html
@@ -2,7 +2,7 @@
 <h3> برچسب‌ها </h3>
 {% for tag in site.tags %}
     <li style="font-size: {{ tag | last | size | times: 100 | divided_by: site.tags.size | plus: 70 }}%">
-        <a href="{{site.baseurl}}/tag/{{ tag | first | slugize }}/">
+        <a href="{{site.baseurl}}/tags/{{ tag | first | slugize }}">
             {{ tag | first }}
         </a>
     </li>
