--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <div class="post med-box">
 	<div class="sub-box">
 		<div class="post-header mb2">
-			<a href="{{ post.url | prepend: site.baseurl }}" class="post-link"><h3 class="h2 post-title">{{ page.title }}</h3></a>
+			<a href="{{ page.url | prepend: site.baseurl }}" class="post-link"><h3 class="h2 post-title">{{ page.title }}</h3></a>
 			<span class="post-meta">{{ page.date | date: "%b %-d, %Y" }}</span>
 		</div>
 
